[gd_scene load_steps=13 format=3 uid="uid://8mdmou5bvqyh"]

[ext_resource type="Texture2D" uid="uid://c7m1h5n5jv7cl" path="res://assets/images/sky.jpg" id="1_71bu6"]
[ext_resource type="Script" path="res://scripts/combat_scene.gd" id="2_djnry"]
[ext_resource type="Script" path="res://scripts/hex_manager.gd" id="3_b8f1b"]
[ext_resource type="PackedScene" uid="uid://ban0igh0lgmrq" path="res://hexes/neutral_hex/neutral_hex.tscn" id="4_f6l8m"]
[ext_resource type="PackedScene" uid="uid://d2fosvrk6p20p" path="res://hexes/player_hex/player_hex.tscn" id="5_fw1dp"]
[ext_resource type="Theme" uid="uid://bt21n7e5vhsxq" path="res://shared/auth_theme.tres" id="6_svwd4"]
[ext_resource type="Script" path="res://scripts/base_button.gd" id="7_1chdg"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_8mkin"]
panorama = ExtResource("1_71bu6")

[sub_resource type="Sky" id="Sky_wjo7w"]
sky_material = SubResource("PanoramaSkyMaterial_8mkin")

[sub_resource type="Environment" id="Environment_n5egb"]
background_mode = 2
sky = SubResource("Sky_wjo7w")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_30dds"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctqtl"]
bg_color = Color(0.481961, 0.598527, 0.833227, 1)

[node name="CombatScene" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00943851, 0, -0.00553703)
script = ExtResource("2_djnry")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n5egb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.68562, -0.0221087)
light_energy = 1.2

[node name="MainCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 5.5, 6.5)
fov = 60.0

[node name="PlayerUnits" type="Node" parent="."]
unique_name_in_owner = true

[node name="EnemyUnits" type="Node" parent="."]
unique_name_in_owner = true

[node name="Hexes" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_b8f1b")

[node name="PlayerHexes" type="Node" parent="Hexes"]
unique_name_in_owner = true

[node name="PlayerHexA" parent="Hexes/PlayerHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -0.0218773, 0.0716352, 0.0136461)
hex_id = "A"

[node name="PlayerHexB" parent="Hexes/PlayerHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -1.77188, 0.0716352, 1.01365)
hex_id = "B"

[node name="PlayerHexC" parent="Hexes/PlayerHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -0.0218773, 0.0716352, 2.01365)
hex_id = "C"

[node name="PlayerHexD" parent="Hexes/PlayerHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, 1.72812, 0.0716352, 1.01365)
hex_id = "D"

[node name="PlayerHexE" parent="Hexes/PlayerHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -1.77188, 0.0716352, 3.01365)
hex_id = "E"

[node name="PlayerHexF" parent="Hexes/PlayerHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -0.0218773, 0.0716352, 4.01365)
hex_id = "F"

[node name="PlayerHexG" parent="Hexes/PlayerHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, 1.72812, 0.0716352, 3.01365)
hex_id = "G"

[node name="EnemyHexes" type="Node" parent="Hexes"]
unique_name_in_owner = true

[node name="EnemyHex" parent="Hexes/EnemyHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -1.74846e-07, 0, -2)
hex_id = "A"
hex_type = "ENEMY"

[node name="EnemyHex2" parent="Hexes/EnemyHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 0, 0, -4)
hex_id = "C"
hex_type = "ENEMY"

[node name="EnemyHex3" parent="Hexes/EnemyHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 1.75, 0, -3)
hex_id = "B"
hex_type = "ENEMY"

[node name="EnemyHex4" parent="Hexes/EnemyHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -1.75, 0, -3)
hex_id = "D"
hex_type = "ENEMY"

[node name="EnemyHex5" parent="Hexes/EnemyHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 1.75, 0, -5)
hex_id = "E"
hex_type = "ENEMY"

[node name="EnemyHex6" parent="Hexes/EnemyHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 1.74846e-07, 0, -6)
hex_id = "F"
hex_type = "ENEMY"

[node name="EnemyHex7" parent="Hexes/EnemyHexes" instance=ExtResource("5_fw1dp")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -1.75, 0, -5)
hex_id = "G"
hex_type = "ENEMY"

[node name="NeutralHexes" type="Node" parent="Hexes"]
unique_name_in_owner = true

[node name="NeutralHex" parent="Hexes/NeutralHexes" instance=ExtResource("4_f6l8m")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, 1.75, 0, -1)

[node name="NeutralHex2" parent="Hexes/NeutralHexes" instance=ExtResource("4_f6l8m")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -1.75, 0, -1)

[node name="ContinueButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 512.0
offset_top = 576.0
offset_right = 768.0
offset_bottom = 640.0
theme = ExtResource("6_svwd4")
theme_override_font_sizes/font_size = 35
text = "CONTINUE"
script = ExtResource("7_1chdg")

[node name="RunSummary" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -356.0
offset_right = 640.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2

[node name="RunResultLabel" type="Label" parent="RunSummary"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 448.0
offset_top = 260.0
offset_right = 832.0
offset_bottom = 388.0
theme_override_font_sizes/font_size = 50
text = "YOU WIN!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="RunSummary"]
z_index = -10
material = SubResource("ShaderMaterial_30dds")
layout_mode = 0
offset_left = 384.0
offset_top = 252.0
offset_right = 896.0
offset_bottom = 508.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ctqtl")

[node name="MenuButton" type="Button" parent="RunSummary"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_svwd4")
theme_override_font_sizes/font_size = 35
text = "BACK TO MENU"
script = ExtResource("7_1chdg")

[node name="WinsLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 88.0
offset_top = 16.0
offset_right = 180.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "WINS: 0 / 10"

[node name="LivesLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 88.0
offset_top = 40.0
offset_right = 180.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "LIVES: 5 / 5"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="RunSummary/MenuButton" to="." method="_on_menu_button_pressed"]
